--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-<html lang="ru">
+<html lang="ru" xmlns:jsp="http://java.sun.com/JSP/Page">
 <head>
     <meta charset="UTF-8">
     <title>Java Enterprise (Topjava)</title>
@@ -9,5 +9,10 @@
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
 </ul>
+
+<ul style="font-size: large">
+    <li><a href="meals?action=mealList">Meals</a></li>
+</ul>
+
 </body>
 </html>
