--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,15 @@
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
+
+    <form action="users" method="post">
+        <p><select name="userId">
+            <option selected value = "1">  User </option>
+            <option value = "2" > Admin </option>
+        </select></p>
+        <p><input type="submit" value="Отправить"></p>
+    </form>
 </ul>
+
 </body>
 </html>
